# Data_Science_Cource_Assignments

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
TA_Project/: LICENSE  (+4 more)
TA_Project/code/: README.md  pyproject.toml  requirements.txt
TA_Project/code/docs/: ASSIGNMENT_FA.md  CODE_AND_FIGURES_GUIDE_FA.md  DATA_DICTIONARY.md  EXTENDED_RUBRIC_MAPPING.md  PROJECT_REPORT.md  PROJECT_REPORT_FA.md  REPRODUCIBILITY.md  RUBRIC_MAPPING.md  TOPIC_COVERAGE_FROM_UT_REPOS.md
TA_Project/code/latex/: assignment.tex  assignment_extended.tex  assignment_fa.tex  project_report_full.tex  project_report_full_fa.tex  solution_manual.tex  solution_manual_extended.tex  solution_manual_fa.tex
TA_Project/code/notebooks/: Assignment_Answers.ipynb  Extended_Assignment_Questions.ipynb  Extended_Assignment_Workbook.ipynb  Solution_Notebook.ipynb
TA_Project/code/reports/: assignment_fa.tex  solution_manual.tex  solution_manual_extended.tex  solution_manual_fa.tex
TA_Project/code/scripts/: full_solution_pipeline.py  generate_report_assets.py  generate_synthetic_data.py  q18_temporal.py  q19_uncertainty.py  q20_fairness_mitigation.py  report_metrics_export.py  train_and_explain.py
TA_Project/code/solutions/: SOLUTION_KEY_FA.md  complete_solution_key.md  extended_solution_key.md  latex_metrics.json  latex_metrics.tex  q1_moving_average.sql  report_stats.json  run_summary.json
TA_Project/code/tests/: test_data_generation.py  test_end_to_end_components.py  test_extended_questions.py  test_full_solution_pipeline.py  test_pipeline.py  test_q18_q20.py  test_run_summary_schema_v2.py
(+220 files in other folders)
