[project]
name = "ut-ece-global-tech-talent"
version = "1.0.0"
description = "End-to-end UT-ECE Data Science final project: Global Tech Talent Migration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "UT-ECE TA Team" }
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "shap>=0.45",
  "xgboost>=2.0",
  "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
